--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,139 @@
-streamlit
+altair==5.3.0
+anyio==3.6.2
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asgiref==3.7.2
+asttokens==2.2.1
+attrs==22.2.0
+backcall==0.2.0
+beautifulsoup4==4.11.2
+bleach==6.0.0
+blinker==1.8.2
+cachetools==5.3.3
+Cartopy==0.22.0
+certifi==2024.2.2
+cffi==1.15.1
+cftime==1.6.3
+charset-normalizer==3.3.2
+click==8.1.7
+comm==0.1.2
+cycler==0.11.0
+debugpy==1.6.6
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.7
+Django==4.2.6
+docopt==0.6.2
+executing==1.2.0
+fastjsonschema==2.16.3
+fonttools==4.29.1
+fqdn==1.5.1
+gitdb==4.0.11
+GitPython==3.1.43
+idna==3.4
+ipykernel==6.21.2
+ipython==8.11.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.4
+isoduration==20.11.0
+jedi==0.18.2
+Jinja2==3.1.2
+jsonpointer==2.3
+jsonschema==4.17.3
+jupyter==1.0.0
+jupyter-console==6.6.2
+jupyter-events==0.6.3
+jupyter_client==8.0.3
+jupyter_core==5.2.0
+jupyter_server==2.3.0
+jupyter_server_terminals==0.4.4
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.5
+kiwisolver==1.3.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.2
+matplotlib==3.5.1
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mistune==2.0.5
+multiprocess==0.70.15
+nbclassic==0.5.2
+nbclient==0.7.2
+nbconvert==7.2.9
+nbformat==5.7.3
+nest-asyncio==1.5.6
+netCDF4==1.6.5
+nitime==0.10.2
+notebook==6.5.2
+notebook_shim==0.2.2
+numpy==1.26.2
+packaging==21.3
+pandas==2.1.3
+pandocfilters==1.5.0
+parso==0.8.3
+pathos==0.3.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.0.1
+platformdirs==3.1.0
+pox==0.3.3
+ppft==1.7.6.7
+prometheus-client==0.16.0
+prompt-toolkit==3.0.38
+protobuf==5.27.2
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==16.1.0
+pybullet==3.2.5
+pycparser==2.21
+pydap==3.4.1
+pydeck==0.9.1
+pygame==2.3.0
+Pygments==2.14.0
+pyparsing==3.0.7
+pyproj==3.6.1
+pyrsistent==0.19.3
+pyshp==2.3.1
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+pytz==2023.3.post1
+PyYAML==6.0
+pyzmq==25.0.0
+qtconsole==5.4.0
+QtPy==2.3.0
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.1
+scipy==1.10.1
+Send2Trash==1.8.0
+shapely==2.0.3
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.0
+soupsieve==2.4
+sqlparse==0.4.4
+stack-data==0.6.2
+streamlit==1.36.0
+tenacity==8.5.0
+terminado==0.17.1
+tinycss2==1.2.1
+toml==0.10.2
+toolz==0.12.1
+tornado==6.2
+tqdm==4.66.1
+traitlets==5.9.0
+typing_extensions==4.8.0
+tzdata==2023.3
+uri-template==1.2.0
+urllib3==2.2.1
+wcwidth==0.2.6
+webcolors==1.12
+webencodings==0.5.1
+WebOb==1.8.7
+websocket-client==1.5.1
+widgetsnbextension==4.0.5
+xarray==2023.10.1
