--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 altair==5.3.0
 anyio==3.6.2
+apify_client==1.7.1
+apify_shared==1.1.2
 appnope==0.1.3
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
 asgiref==3.7.2
 asttokens==2.2.1
-attrs==22.2.0
+attrs==23.2.0
 backcall==0.2.0
 beautifulsoup4==4.11.2
 bleach==6.0.0
@@ -26,12 +28,16 @@ defusedxml==0.7.1
 dill==0.3.7
 Django==4.2.6
 docopt==0.6.2
+exceptiongroup==1.2.1
 executing==1.2.0
 fastjsonschema==2.16.3
 fonttools==4.29.1
 fqdn==1.5.1
 gitdb==4.0.11
 GitPython==3.1.43
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.4
 ipykernel==6.21.2
 ipython==8.11.0
@@ -69,6 +75,7 @@ nitime==0.10.2
 notebook==6.5.2
 notebook_shim==0.2.2
 numpy==1.26.2
+outcome==1.3.0.post0
 packaging==21.3
 pandas==2.1.3
 pandocfilters==1.5.0
@@ -97,7 +104,9 @@ pyparsing==3.0.7
 pyproj==3.6.1
 pyrsistent==0.19.3
 pyshp==2.3.1
+PySocks==1.7.1
 python-dateutil==2.8.2
+python-dotenv==1.0.1
 python-json-logger==2.0.7
 pytz==2023.3.post1
 PyYAML==6.0
@@ -109,11 +118,13 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.7.1
 scipy==1.10.1
+selenium==4.22.0
 Send2Trash==1.8.0
 shapely==2.0.3
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.4
 sqlparse==0.4.4
 stack-data==0.6.2
@@ -126,14 +137,18 @@ toolz==0.12.1
 tornado==6.2
 tqdm==4.66.1
 traitlets==5.9.0
-typing_extensions==4.8.0
+trio==0.26.0
+trio-websocket==0.11.1
+typing_extensions==4.12.2
 tzdata==2023.3
 uri-template==1.2.0
 urllib3==2.2.1
 wcwidth==0.2.6
 webcolors==1.12
+webdriver-manager==4.0.1
 webencodings==0.5.1
 WebOb==1.8.7
-websocket-client==1.5.1
+websocket-client==1.8.0
 widgetsnbextension==4.0.5
+wsproto==1.2.0
 xarray==2023.10.1
